Inserindo imagens para teste e criando variaveis

--- a/lamp/index.html
+++ b/lamp/index.html
@@ -13,10 +13,11 @@
     <body>
         <div class="container-fluid">
             <div class="content-container">
-                <img src="images/on-lamp.jpg" alt="imagem de uma lampada, que pode estar acesa, apagada ou quebrada"
-                    width="250px">
-                <img class="on-off-button" src="images/on-button.png" alt="botao que liga e desliga a lampada"
-                    width="150px">
+                <img id="lamp" src="images/on-lamp.jpg"
+                    alt="imagem de uma lampada, que pode estar acesa, apagada ou quebrada" width="250px">
+                <img id="toggle-button" class="on-off-button" src="images/on-button.png"
+                    alt="botao que liga e desliga a lampada" width="150px">
+                <button id="restore-button" class="btn btn-lg btn-primary">Trocar lâmpada</button>
             </div>
         </div>
         <script src="script.js"></script>
